@@ -5,6 +5,7 @@ export(BB_Fun)
 export(BetaFun)
 export(DownSampling)
 export(EstPrior)
+export(EstPrior_rcpp)
 export(NOISY_FUN)
 export(Prior_fun)
 export(SyntheticControl)
