@@ -209,23 +209,34 @@ EstPrior <- function(Data,verbose = TRUE) {
     # size_est <- CoefDat[, 1]
     
     #Vectorization make computation faster
-    n=dim(Data)[2];
-    m = rowMeans(Data)
-    v = (n - 1) / n * apply(Data,1,var);
-    mme_size= m^2/(v - m);
-    mme_size[v<=m] =NaN;
+    # n=dim(Data)[2];
+    # m = rowMeans(Data)
+    # v = (n - 1) / n * apply(Data,1,var);
+    # mme_size= m^2/(v - m);
+    # mme_size[v<=m] =NaN;
+    # 
+    # M_ave_ori <- m
+    # size_est <- mme_size
+    # 
+    # 
+    # names(M_ave_ori)<-rownames(Data)
+    # names(size_est)<-rownames(Data)
+    # 
+    # if (verbose) {
+    #     message("Priors estimation based on MME method has completed.")
+    # }
+    # 
+    # return(list(MU = M_ave_ori, SIZE = size_est))
+    rout<-EstPrior_rcpp(Data=Data)
+    rout[[1]]<-as.vector(rout[[1]])
+    rout[[2]]<-as.vector(rout[[2]])
+    rout[[3]]<-as.vector(rout[[3]])
+    rout[[2]][rout[[3]]<=rout[[1]]] =NaN;
     
-    M_ave_ori <- m
-    size_est <- mme_size
-
-    
+    M_ave_ori<-rout[[1]]
+    size_est<-rout[[2]]
     names(M_ave_ori)<-rownames(Data)
     names(size_est)<-rownames(Data)
-
-    if (verbose) {
-        message("Priors estimation based on MME method has completed.")
-    }
-
     return(list(MU = M_ave_ori, SIZE = size_est))
 }
 #' @title   A wrapper function of \code{EstPrior}
